samples/_failures_safe/1761637654_eb1f27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8c75c2e.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e8c75c2e.c:186:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  186 |     struct Vertex* start
      |            ^~~~~~
./samples/SAFE/__tmp_e8c75c2e.c:186:12: error: expected declaration or statement at end of input
